Fix wide photos layout on mobile

--- a/assets/styles/grid.css
+++ b/assets/styles/grid.css
@@ -94,12 +94,24 @@
       width: 91.666%;
     }
 
+    & [data-width="10"],
+    & [data-width="11"],
+    & [data-width="12"] {
+      width: 100%;
+    }
+
     & [data-offset] {
       margin-left: 0;
     }
 
     & [data-offset]:nth-child(2n+1) {
       margin-left: 8.333%;
+    }
+
+    & [data-offset][data-width="10"],
+    & [data-offset][data-width="11"],
+    & [data-offset][data-width="12"] {
+      margin-left: 0;
     }
   }
 }
